--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         </div>
 
         <div class="mobile__explore">
-            Explore our shop <img class="explore__arrow" src="./assets/images/Path2.png"> <br>
+            Explore our shop <img class="explore__arrow" src="./assets/images/Path.svg"> <br>
         
         </div>
 
